fix(tpa): remediate pass 32 findings 1-4